[package]
name = "compiler_builtins"
authors = ["The Rust Project Developers"]
version = "0.0.0"
build = "../../libcompiler_builtins/build.rs"

[lib]
path = "../../libcompiler_builtins/src/lib.rs"
test = false
doctest = false

[build-dependencies]
cc = "1.0.1"

[features]
c = []
default = ["c", "rustbuild", "compiler-builtins"]
mem = []
rustbuild = []
compiler-builtins = []
